--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,15 @@ a {
   transform: scale(1.1);
   transition: transform 0.3s;
 }
+.booking-form input:focus:invalid{
+  border: 4px solid red;
+}
+.booking-form input:focus:valid{
+  border: 4px solid rgb(106, 202, 71);
+}
+.booking-form select:focus{
+  border: 4px solid rgb(106, 202, 71);
+}
+.booking-form select:focus:invalid{
+  border: 4px solid red;
+}
