--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@ li {
   padding: 10px;
   text-align: center;
 }
+header img {
+  height: 100px;
+  width: 100%;
+}
 a {
   text-decoration: none;
   color: black;
